--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "engine": {
+  "engines": {
     "node": "10.17.0",
     "npm": "6.12.0"  
   }, 
