--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express": "^4.16.4",
     "pg": "7.15.0",
     "request": "^2.88.0",
-    "sentiment": "^5.0.2",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "sentiment":"^5.0.2"
   }
 }
