--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "articulate-nlg": "^2.0.11",
     "body-parser": "^1.18.3",
     "dialogflow": "^0.8.2",
     "express": "^4.16.4",
     "pg": "7.15.0",
     "request": "^2.88.0",
-    "uuid": "^3.3.2",
-    "sentiment":"^5.0.2"
+    "sentiment": "^5.0.2",
+    "uuid": "^3.3.2"
   }
 }
